# JAPredictBet

./: .env.example  .gitignore  AGENTS.md  P1_QUICK_START.md  README.md  WORK_MODEL.md  config.yml  config_backup.yml  config_test_50matches.yml  consensus_output.txt  generate_fake_data.py  pyproject.toml  python rename_files.py  requirements-dev.txt  requirements.txt  run.py  test_output.txt  update_pipeline.py
.github/workflows/: ci.yml
data/mapping/: league_tournament_ids.json  superbet_teams.json
data/raw/: mock_odds.json
docs/: ARCHITECTURE.md  BACKTESTING_STRATEGY.md  COMPLETION_HISTORY.md  DAILY_WORKFLOW.md  DATA_SCHEMA.md  EXECUTIVE_SUMMARY.md  FEATURE_ENGINEERING_PLAYBOOK.md  FEATURE_IMPORTANCE_GUIDE.md  IMPLEMENTATION_CONSENSUS.md  MODEL_ARCHITECTURE.md  MVP_PROJECT_PLAN.md  P0_COMPLETION_SUMMARY.md  P1_CHECKLIST.md  P1_DEVELOPMENT_PLAN.md  P1_MASTER_INDEX.md  P1_TIMELINE_DEPENDENCIES.md  PRODUCT_REQUIREMENTS.md  PROJECT_CONTEXT.md  PROMPT_ANALYST.md  PROMPT_MESTRE.md  TRAINING_STRATEGY.md  VALIDATION.md  VALIDATION_REPORT.md  consensus_test_report.txt  consensus_test_report_after_fix.txt  consensus_test_report_line95.txt  context_enrichment_study.md  model_inputs_correlation_report.md  model_inputs_correlation_report.txt  next_pass.md  next_pass.txt  training_test_report.txt
scripts/: check_seasons.py  consensus_accuracy_report.py  discover_tournaments.py  feature_correlation_analysis.py  generate_fake_data.py  hyperopt_search.py  menu.py  prepare_test_50matches.py  refresh_features.py  scrape_superbet_playwright.py  shadow_observe.py  superbet_browser_scraper.js  superbet_scraper.py  update_pipeline.py
src/japredictbet/: __init__.py  config.py
src/japredictbet/agents/: __init__.py  analyst.py  base.py  gatekeeper.py  registry.py
src/japredictbet/betting/: __init__.py  engine.py  risk.py  value_detector.py
src/japredictbet/data/: context_collector.py  feature_store.py  ingestion.py
src/japredictbet/features/: elo.py  matchup.py  rolling.py  team_identity.py
src/japredictbet/models/: __init__.py  importance.py  predict.py  shap_weights.py  train.py
src/japredictbet/odds/: __init__.py  collector.py  pre_llm_filter.py  pre_match_odds.py  superbet_client.py
src/japredictbet/pipeline/: __init__.py  gatekeeper_live_pipeline.py  mvp_pipeline.py  walk_forward.py
src/japredictbet/probability/: __init__.py  calibration.py  poisson.py
src/japredictbet/utils/: logging.py
tests/: test_config_defaults.py
tests/agents/: test_analyst.py  test_gatekeeper.py
tests/betting/: integration_p1a2.py  integration_p1a3.py  test_clv.py  test_engine.py  test_lambda_validation.py  test_p1a2_dynamic_margin.py  test_risk.py  test_weighted_consensus.py
tests/data/: test_context_collector.py
tests/features/: test_drop_redundant.py  test_h2h.py  test_rolling_cross_group.py  test_rolling_p1b2.py
tests/models/: __init__.py  test_missing_feature_imputation.py  test_train.py
tests/odds/: test_collector.py  test_pre_llm_filter.py  test_superbet.py
tests/pipeline/: test_mvp_pipeline.py  test_shadow_integration.py
tests/probability/: test_calibration.py
value/: value_engine.py
